fixed bezier taking too long with long distances

--- a/autosyntax/common/static/common/css/style.css
+++ b/autosyntax/common/static/common/css/style.css
@@ -142,7 +142,8 @@ body {
     display: none;
 }
 
-.download-link:hover {
+.download-link:hover,
+.whoami-link:hover {
     text-decoration: underline;
 }
 
